syntax = "proto3";

package careers;

service CareersService {
  rpc GetAllCareers(GetAllCareersRequest) returns (GetAllCareersResponse) {}
}

message GetAllCareersRequest {}

message Career {
  string id = 1;
  string name = 2;
}

message GetAllCareersResponse { repeated Career careers = 1; }

service SubjectsService {
  rpc GetAllSubjects(GetAllSubjectsRequest) returns (GetAllSubjectsResponse) {}
}

// Requests (typically empty for these read operations)
message GetAllSubjectsRequest {}

// Subject data structure
message Subject {
  string id = 1;
  string code = 2;
  string name = 3;
  string department = 4;
  int32 credits = 5;
  int32 semester = 6;
}

// Responses
message GetAllSubjectsResponse { repeated Subject subjects = 1; }

service SubjectRelationshipsService {
  rpc GetAllRelationships(GetAllRelationshipsRequest) returns (GetAllRelationshipsResponse) {}
  rpc GetPrerequisitesMap(GetPrerequisitesMapRequest) returns (GetPrerequisitesMapResponse) {}
  rpc GetPostrequisitesMap(GetPostrequisitesMapRequest) returns (GetPostrequisitesMapResponse) {}
}

message GetAllRelationshipsRequest {}
message GetPrerequisitesMapRequest {}
message GetPostrequisitesMapRequest {}

message GetAllRelationshipsResponse {
  repeated SubjectRelationship relationships = 1;
}

message GetPrerequisitesMapResponse {
  repeated PrerequisiteEntry prerequisites = 1;
}

message GetPostrequisitesMapResponse {
  repeated PostrequisiteEntry postrequisites = 1;
}

// Subject relationship object
message SubjectRelationship {
  string id = 1;
  string subject_code = 2;
  string prerequisite_code = 3;
}

message PrerequisiteEntry {
  string subject_code = 1;
  repeated string prerequisite_codes = 2;
}

message PostrequisiteEntry {
  string subject_code = 1;
  repeated string postrequisite_codes = 2;
}